test/conformance/chainsaw/force-failure-policy-ignore/mutating-policy/fail/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: different-trigger-target
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-reporting-different-trigger-target
  - name: sleep
    try:
    - sleep:
        duration: 3s

  - name: webhook
    description: Verify webhooks for the mutating policy
    try:
    - assert:
        file: webhooks.yaml
        timeout: 60s
